--- a/style.css
+++ b/style.css
@@ -7,7 +7,11 @@ body{
     margin-top:200px;
 }
 
-.output{
+input, button{
+    box-shadow: 0px 15px 15px rgb(243, 242, 242);
+}
+
+#output{
     margin-top: 100px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 500;
@@ -16,7 +20,7 @@ body{
 }
 
 
-.output #result{
+#output #result{
     color: #444;
     font-size: 20px;
 }
